		Planner: fixed module name substitution in links in Lesson Planner
		Students: added sibling and family information to Letters Home by Roll Group
		Students: added Comment field to medical form, linked to student application form.
		Students: added View option to Students by Form Group report, allowing Basic or Extended view
		System Admin: fixed bug causing theme names with spaces to break the theme installer
		System Admin: fixed spelling error in Department settings
		User Admin: fixed Child's Name list in Edit Family to include all students
		User Admin: fixed bug preventing some family links from showing up in Manage Users
		User Admin: removed Back link from child and adult delete modals in Manage Families
		User Admin: tweaked user CLI to better handle parents in multiple families

v15.0.00
--------
	Headlines
		Code base refactoring of all interface forms
		Timetable Admin: added ability to map classes to Roll Group, sync enrolments, and auto-enrol new students
		Activated Brazilian Portuguese as complete languages

	Changes With Important Notices
		Planner: integrated Resources into the Planner module (/modules/Resources needs to be manually removed)

    Security
		System: fixed security vulnerability in the installer
        System: added validation and output escaping to Personal Background URL in Preferences

	Tweaks & Bug Fixes
		System: fixed erroneous Georgian language code
		System: added Greek and Amharic as development languages
		System: added South African Rand, Trinidad & Tobago Dollar, Swedish Krona, Chinese Renminbi and Russian Ruble as currencies
		System: fixed missing form validation for dropdowns created with User Custom Fields
		System: updated Google OAuth library to latest version (v2.2.0)
		System: fixed Sign In With Google to fix missing token refresh issue
        System: fixed timezone not being set in CLI scripts
		System: fixed bug preventing activity day from being correctly shown in Parent Dashboard